css/styles.css
/* ============================================================================================================
                                                
                                            GENERAL STYLING

===============================================================================================================*/

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --dark-blue: #163746;
    --blue: #1f6585;
    --green: #5C8F21;
    --red: #BF1717;
    --orange: #e09407;
    --yellow: #F9DC5C;
    --white: #edeff0;
    --grey: #696969;
}

:focus-visible {
    outline: 4px solid var(--orange);
    border-radius: 5px;
}

a,
a:visited {
    color: currentColor;
    text-decoration: none;
}

body {
    transition: opacity 1s ease;
    opacity: 0;
}

main,
.nav {
    position: fixed;
    top: calc(6vh + 29px);
    bottom: calc(6vh + 11px);
    right: 0;
    left: 0;
    padding: 5vh 5vw;
}

main,
.nav,
footer {
    transition: opacity 1s ease;
}

.light {
    background-color: var(--white);
    color: var(--dark-blue);
}

.light #pop-up-box {
    box-shadow: 4px 4px 10px var(--dark-blue), -4px -4px 10px var(--dark-blue), 4px -4px 10px var(--dark-blue), -4px 4px 10px var(--dark-blue);
}

.dark {
    background-color: var(--dark-blue);
    color: var(--white);
}


.dark #pop-up-box {
    box-shadow: 4px 4px 10px var(--grey), -4px -4px 10px var(--grey), 4px -4px 10px var(--grey), -4px 4px 10px var(--grey);
}

.unica {
  font-family: 'Unica One', sans-serif;
}

.inter {
    font-family: 'Inter Tight', serif;
}

.hidden {
    display: none;
}

button,
a,
.close,
.project-container {
    cursor: pointer;
}

button {
    font-family: inherit;
}

/* ============================================================================================================
                                                
                                        HEADER/FOOTER STYLING

===============================================================================================================*/

header,
footer {
    padding: 0 6vw;
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    left: 0;
    right: 0;
}

header {
    z-index: 3;
    top: -6vh;
    transition: top 1s ease;
}

footer {
    bottom: 6vh;
    flex-direction: column;
}

footer p a {
    transition: all .5s;
}

footer p a:hover {
    text-decoration: underline;
}

.header-left,
.header-right {
    width: 50%;
}

.header-left {
    float: left;
}

.header-right {
    float: right;
}

.header-right ul {
    display: flex;
    justify-content: flex-end;
    list-style-type: none;
    align-items: center;
}

.header-right li {
    margin-left: 15px;
}

#logo {
    height: 30px;
}

.header-icons {
    font-size: 20px;
}

.header-buttons {
    border: none;
    color: inherit;
    background: transparent;
    height: 22px;
    width: 22px;
}

/* ============================================================================================================
                                                
                                            NAV STYLING

===============================================================================================================*/

.nav {
    display: none;
    opacity: 0;
}

nav {
    height: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: row;
}

.nav ul {
    height: 80%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    list-style-type: none;
    max-height: 200px;
    padding-left: 15vw;
}

.nav li {
    font-size: 1.5rem;
    font-weight: 600;
}

.nav-link {
    z-index: 3;
    transition: border .5s ease;
    display: inline-block;
    position: relative;
    padding-bottom: 7px;
}

.nav-link::before {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 0;
    height: 6px;
    background-color: var(--yellow);
    transition: width .5s ease-out;
}

.nav-link:hover::before,
.nav-link:focus::before {
    width: 100%;
}

/* ============================================================================================================
                                                
                                       HOME PAGE STYLING

===============================================================================================================*/

.home {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.home h1 {
    font-size: 1rem;
}

.name {
    letter-spacing: 1px;
}

#full-name {
    font-size: 1.5rem;
}

#nickname {
    font-size: 1.75rem;
    /* text-shadow: 2px 2px 4px var(--grey); */
}

.home h2 {
    border-top: 2px dashed currentColor;
    border-bottom: 2px dashed currentColor;
    padding: 5px;
    width: fit-content;
}

.home h2 {
    margin: 5px 0 7px;
    font-size: .8rem;
}

.home-links-container {
    display: flex;
    justify-content: space-between;
    width: fit-content;
}

.home-link-wrapper:first-of-type {
    margin-right: 15px;
}

.home-link {
    font-weight: 600;
    font-size: .9rem;
}

.home-link-wrapper:hover,
.home-link-wrapper:focus {
    transform: scale(1.2);
}

.arrow,
.download,
.pdf {
    margin-right: 10px;
}

footer p {
    text-align: center;
    font-weight: 600;
    font-size: xx-small;
}

footer p:first-of-type {
    font-size: x-small;
}

/* ============================================================================================================
                                                
                                            ABOUT PAGE STYLING

===============================================================================================================*/

.about {
    position: absolute;
    bottom: 0;
    padding: 20px;
}

.about-wrapper {
    display: flex;
    flex-direction: column-reverse;
    margin: 0 auto;
}
/* ... */

